# opengl-projects

./: CMakeLists.txt  NOTICE  README.md  imgui.ini
dependencies/imgui_docking/: CMakeLists.txt
resources/shaders/: 3D light source texture coordinates.vert  3D light source.frag  3D light source.vert  3D lit.frag  3D lit.vert  basic 3D lit.frag  basic 3D lit.vert  basic.frag  basic.vert  basic3D.frag  basic3D.vert  batch.frag  batch.vert  color.frag  color.vert  default.frag  default.vert
resources/textures/: Texture attribution.txt
src/: BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  DirectionalLight.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Material.h  MaterialPlain.h  Mesh.cpp  Mesh.h  MeshVertex.h  PointLight.h  PosNormalVertex.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Vector.cpp  Vector.h  Vertex.h  Vertex3D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: Test.h  TestBasic3D.cpp  TestBasic3D.h  TestBatchRendererGrid.cpp  TestBatchRendererGrid.h  TestBatchRendering.cpp  TestBatchRendering.h  TestBatchRenderingGrid.cpp  TestBatchRenderingGrid.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestCube.cpp  TestCube.h  TestLighting.cpp  TestLighting.h  TestLightingMaps.cpp  TestLightingMaps.h  TestMenu.cpp  TestMenu.h  TestPolygon.cpp  TestPolygon.h  TestTexture.cpp  TestTexture.h
